crates/service/tests/code_action/snapshots/features__code_action__remove_mut__missing_r_paren.snap
---
source: crates/service/tests/code_action/remove_mut.rs
expression: response
---
[
  {
    "title": "Remove `mut`",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 14
          },
          "end": {
            "line": 2,
            "character": 17
          }
        },
        "code": "needless-mut",
        "message": ""
      }
    ],
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 13
              },
              "end": {
                "line": 2,
                "character": 14
              }
            },
            "newText": ""
          },
          {
            "range": {
              "start": {
                "line": 2,
                "character": 14
              },
              "end": {
                "line": 2,
                "character": 17
              }
            },
            "newText": ""
          },
          {
            "range": {
              "start": {
                "line": 2,
                "character": 17
              },
              "end": {
                "line": 2,
                "character": 18
              }
            },
            "newText": ""
          }
        ]
      }
    },
    "isPreferred": true
  }
]
